Fixes - Fixed new images not showing - Removed ad-like poop

--- a/public/css/guide-styles/optimize-windows-pc.css
+++ b/public/css/guide-styles/optimize-windows-pc.css
@@ -1,5 +1,4 @@
-#more-tools-to-discover .cool-start,
-  .expand-all.active section[id^="step-hidden-from-"] {
+.expand-all.active section[id^="step-hidden-from-"] {
     display: block;
   }
   img {
@@ -67,20 +66,6 @@
     bottom: 0;
     left: 0;
   }
-  #more-tools-to-discover,
-  #more-tools-to-discover a {
-    border-radius: 0.33rem;
-  }
-  #more-tools-to-discover a {
-    display: flex;
-    justify-content: center;
-    flex: 1;
-    border: 2px solid var(--color-secondary);
-  }
-  #more-tools-to-discover a:hover,
-  #more-tools-to-discover a:focus {
-    transform: scale(1.05);
-  }
   .code {
     font-family: monospace;
     word-wrap: break-word;
@@ -94,13 +79,6 @@
     margin-bottom: 7.5rem;
   }
   @media only screen and (min-width: 320px) and (max-width: 480px) {
-    #more-tools-to-discover .cool-start {
-      padding: 0.8rem;
-    }
-    #more-tools-to-discover a {
-      padding: 0.55rem 0rem;
-      margin: 1.33rem;
-    }
     header h1 {
       padding: 0.89rem;
     }
@@ -110,17 +88,6 @@
     }
   }
   @media only screen and (min-width: 481px) and (max-width: 768px) {
-    #more-tools-to-discover .cool-start {
-      padding: 1rem;
-    }
-    #more-tools-to-discover a {
-      padding: 0.45rem 0;
-      margin: 1.5rem;
-    }
-    #more-tools-to-discover a:hover,
-    #more-tools-to-discover a:focus {
-      transform: scale(1.03);
-    }
     header h1 {
       padding: 0.46rem;
     }
@@ -133,17 +100,6 @@
     }
   }
   @media only screen and (min-width: 769px) and (max-width: 1024px) {
-    #more-tools-to-discover .cool-start {
-      padding: 1.5rem;
-    }
-    #more-tools-to-discover a {
-      padding: 0.5rem 0;
-      margin: 1.55rem;
-    }
-    #more-tools-to-discover a:hover,
-    #more-tools-to-discover a:focus {
-      transform: scale(1.02);
-    }
     header h1,
     header h1 .description {
       padding: 0.7rem;
@@ -153,17 +109,6 @@
     }
   }
   @media only screen and (min-width: 1025px) and (max-width: 1200px) {
-    #more-tools-to-discover .cool-start {
-      padding: 1.65rem;
-    }
-    #more-tools-to-discover a {
-      padding: 0.6rem 0;
-      margin: 1.75rem;
-    }
-    #more-tools-to-discover a:hover,
-    #more-tools-to-discover a:focus {
-      transform: scale(1.01);
-    }
     header h1,
     header h1 .description {
       padding: 0.54rem;
@@ -173,17 +118,6 @@
     }
   }
   @media only screen and (min-width: 1201px) {
-    #more-tools-to-discover .cool-start {
-      padding: 2rem;
-    }
-    #more-tools-to-discover a {
-      padding: 0.5rem 0;
-      margin: 2rem;
-    }
-    #more-tools-to-discover a:hover,
-    #more-tools-to-discover a:focus {
-      transform: scale(1);
-    }
     header h1 {
       padding: 0.65rem;
     }
